# dryad2dataverse

./: .gitignore  404.html  README.md  daemon.cmd.soroban_test.txt  dryadd.py  flake8.txt  index.html  license.md  mkdocs.yml  objects.inv  pydoc-markdown.yml  pylintrc  pyproject.toml  requirements.txt  search.html  setup.py  sitemap.xml
api_reference/: index.html
binaries/: dryadd.exe.sha256  dryadd.sha256  dv_bulk_releaser.exe.sha256  dv_bulk_releaser.sha256  readme.md
changelog/: index.html
compiling/: index.html
credits/: index.html
css/: extra.css
dbase_structure/: anomalies.html  columns.html  deletionOrder.txt  index.html  info-html.txt  insertionOrder.txt  orphans.html  relationships.html  routines.html
dbase_structure/diagrams/orphans/: lastcheck.1degree.dot  orphans.dot
dbase_structure/diagrams/summary/: relationships.real.compact.dot  relationships.real.large.dot
dbase_structure/diagrams/tables/: dryadFiles.1degree.dot  dryadFiles.2degrees.dot  dryadStudy.1degree.dot  dvFiles.1degree.dot  dvFiles.2degrees.dot  dvStudy.1degree.dot  dvStudy.2degrees.dot  failed_uploads.1degree.dot  failed_uploads.2degrees.dot
dbase_structure/tables/: dryadFiles.html  dryadStudy.html  dvFiles.html  dvStudy.html  failed_uploads.html  lastcheck.html
docs/: _config.yml  acknowledgements.md  api_reference.md  changelog.md  compiling.md  credits.md  dryadd.md  faq.md  index.md  installation.md  other_utils.md  pydoc-markdown.yml  reference.md  samples.md  script.md  scripts.md  track.md
docs/dbase_structure/: anomalies.html  constraints.html  deletionOrder.txt  dryad_dataverse_monitor.sqlite3.%.xml  dryad_dataverse_monitor.sqlite3.dryad_dataverse_monitor.xml  index.html  orphans.html  relationships.html  routines.html
docs/dbase_structure/tables/: dryadFiles.html  dryadStudy.html  dvFiles.html  dvStudy.html  failed_uploads.html
dryad2dataverse/: __init__.py  constants.py  dryad.py  exceptions.py  handlers.py  monitor.py  serializer.py  transfer.py
dryadd/: index.html
faq/: index.html
installation/: index.html
internal_docs/: DrayadToDataverseOverview.md  DryadAPINotes.md  DryadComparison_API_Changes.txt  DryadDecisionLog.md  DryadErrorEmail.txt  PreliminaryNotes.md  Programming_notes.md  UpdateProcedureFlowchart.afdesign  UploadingDataverseJSON.md  UserDocumentation.md
internal_docs/analysis/: dryadDois.pickle  dryadInfo.db  placenames.tsv  readme_sqlite.md
internal_docs/analysis/crosswalk/: DryadToDataverseCrosswalk.xlsx
internal_docs/analysis/dryadInfoSchema/: anomalies.html  columns.html  constraints.html  deletionOrder.txt  dryadInfo.db.dryadInfo.xml  index.html  info-html.txt  insertionOrder.txt  orphans.html  relationships.html  routines.html
internal_docs/sample_jsons/: dataverse_citationBlock_jsonFields.txt  dryad.json  dryad_longest_ubc.json  dryad_study.json  jsonSourceInformation.md
other_utils/: index.html
reference/: index.html
script/: index.html
scripts/: dryadd.py  dv_bulk_releaser.py  index.html  sample_loop.py
search/: search_index.json
src/dryad2dataverse/: __init__.py  auth.py  config.py  constants.py  exceptions.py  handlers.py  monitor.py  serializer.py  transfer.py
tests/: 2rbnzs7jp_14Jan22.json  2rbnzs7jp_file_json_14Jan22.json  badURL.json  dryad2dataverse_tests.py  dryadStudy.json  dryad_dummy_metadata.json  dryad_files_added.json  dryad_files_added_toolarge.json  dryad_files_deleted.json  dryad_files_orig.json  nullField.json  tests_monitor.py  tests_serializer.py  tests_transfer.py  ubc_rand1_zip.md5  ubc_rand2.csv  ubc_rand3.md5  ubc_rand4.csv  ubc_rand4.md5
tmp/: dv_bulk_releaser.py
tmp/old_test_files/: ubc_rand1.csv  ubc_rand1.md5  ubc_rand2.md5  ubc_rand3.csv
track/: index.html
(+40 files in other folders)
