[project]
name = "dryad2dataverse"
version = "0.7.10"
description = "Utility for copying and syncing data from a Dryad data repository to a Dataverse repository"
authors = [
    {name = "Paul Lesack",email = "paul.lesack@ubc.ca"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9, <4"
dependencies = [
    "certifi (>=2022.12.7)",
    "charset-normalizer (>=2.0.4)",
    "chardet (>=3.0.4)",
    "idna (>=2.10.0)",
    "pycryptodome (>=3.20.0)",
    "requests (>=2.26.0)",
    "requests-toolbelt (>=0.9.1)",
    "urllib3 (>=2.6.1)",
    "pydoc-markdown (>=4.8.2,<5.0.0)",
    "setuptools (>=80.8.0,<81.0.0)"
]

keywords =['Harvard Dataverse',
	'Dataverse',
	'research data management',
	'data repository',
	'Dryad',
	'datadryad.org',
	'dataverse.org']


[project.scripts]
#This should be restructured one day
dryadd = 'dryad2dataverse.scripts.dryadd:main'

[project.urls]
Homepage = 'https://ubc-library-rc.github.io/dryad2dataverse'
Documentation = 'https://ubc-library-rc.github.io/dryad2dataverse'
Repository = 'https://github.com/ubc-library-rc/dryad2dataverse.git'
"Bug Tracker" = 'https://github.com/ubc-library-rc/dryad2dataverse/issues'


[tool.poetry]
classifiers = ['Development Status :: 4 - Beta',
			   'Environment :: Console',
			   'Intended Audience :: Education',
			   'License :: OSI Approved :: MIT License',
			   'Topic :: Education',
			   'Topic :: Internet :: WWW/HTTP :: Site Management',
			   'Topic :: Utilities']

[tool.poetry.group.dev.dependencies]
pylint = ">=3.3.6"
mkdocs = ">=1.6.1"
pydoc-markdown = ">=4.8.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
